изменяет футер на странице портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -227,16 +227,16 @@
 						<h3 class="footer-social-title">присоединяйтесь</h3>
 						<ul class="footer-list-socials">
 							<li class="footer-socials-item">
-								<a class="footer-socials-link" href="">Instagram</a>
+								<a class="footer-socials-link footer-icon-instagram" href="https://www.instagram.com/"></a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link" href="">Twitter</a>
+								<a class="footer-socials-link footer-icon-twitter" href="https://twitter.com/"></a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link" href="">Facebook</a>
+								<a class="footer-socials-link footer-icon-facebook" href="https://www.facebook.com/"></a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link" href="">Linkedin</a>
+								<a class="footer-socials-link footer-icon-linkedin" href="https://www.linkedin.com/"></a>
 							</li>
 						</ul>
 					</div>
