--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
 
 					<ul class="header-contact">
 						<li class="header-contact-address">
-							<a class="contact-address icon-envelop" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<svg class="icon-address-header">
+								<use href="./images/sprite.svg#icon-envelope"></use>
+							</svg>
+							<a class="contact-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
 						</li>
 						<li class="header-contact-address">
-							<a class="contact-address icon-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+							<a class="contact-address" href="tel:+380961111111">
+								<svg class="icon-address-header">
+									<use href="./images/sprite.svg#icon-phone"></use>
+								</svg>
+								+38 096 111 11 11
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -67,25 +75,45 @@
 				<div class="container">
 					<h2 class="section-title benefits-title">Преимущества(скрытый заголовок)</h2>
 					<ul class="benefits-list">
-						<li class="benefits-list-item icon-antenna">
+						<li class="benefits-list-item">
+							<div class="benefits-icon-box">
+								<svg class="icon-benefits">
+									<use href="./images/sprite.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="title">внимание к деталям</h3>
 							<p class="benefits-text">
 								Идейные соображения, а также начало повседневной работы по формированию позиции.
 							</p>
 						</li>
-						<li class="benefits-list-item icon-clock">
+						<li class="benefits-list-item">
+							<div class="benefits-icon-box">
+								<svg class="icon-benefits">
+									<use href="./images/sprite.svg#icon-clock"></use>
+								</svg>
+							</div>
 							<h3 class="title">пунктуальность</h3>
 							<p class="benefits-text">
 								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 							</p>
 						</li>
-						<li class="benefits-list-item icon-diagram">
+						<li class="benefits-list-item">
+							<div class="benefits-icon-box">
+								<svg class="icon-benefits">
+									<use href="./images/sprite.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="title">планирование</h3>
 							<p class="benefits-text">
 								Равным образом консультация с широким активом в значительной степени обуславливает.
 							</p>
 						</li>
-						<li class="benefits-list-item icon-astronaut">
+						<li class="benefits-list-item">
+							<div class="benefits-icon-box">
+								<svg class="icon-benefits">
+									<use href="./images/sprite.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="title">современные технологии</h3>
 							<p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
@@ -98,15 +126,15 @@
 					<h2 class="section-title services-title">Чем мы занимаемся</h2>
 					<ul class="services-list">
 						<li class="services-list-item">
-							<img class="services-image" src="./images/desktop.svg" alt="Десктопные приложения" />
+							<img class="services-image" src="./images/desktop.jpg" alt="Десктопные приложения" />
 							<h3 class="services-list-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
 						</li>
 						<li class="services-list-item">
-							<img class="services-image" src="./images/mobile.svg" alt="Мобильные приложения" />
+							<img class="services-image" src="./images/mobile.jpg" alt="Мобильные приложения" />
 							<h3 class="services-list-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
 						</li>
 						<li class="services-list-item">
-							<img class="services-image" src="./images/computer.svg" alt="Дизайнерские решения" />
+							<img class="services-image" src="./images/computer.jpg" alt="Дизайнерские решения" />
 							<h3 class="services-list-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
 						</li>
 					</ul>
@@ -123,16 +151,32 @@
 							<p class="team-list-text">Product Designer</p>
 							<ul class="team-list-socials">
 								<li class="socials-item">
-									<a class="socials-item-link" href="#">Instagram</a>
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-instagram-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Twitter</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-twitter-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Facebook</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-Facebook-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Linkedin</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-linkedin-2"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -142,16 +186,32 @@
 							<p class="team-list-text">Frontend Developer</p>
 							<ul class="team-list-socials">
 								<li class="socials-item">
-									<a class="socials-item-link" href="#">Instagram</a>
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-instagram-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Twitter</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-twitter-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Facebook</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-Facebook-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Linkedin</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-linkedin-2"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -161,16 +221,32 @@
 							<p class="team-list-text">Marketing</p>
 							<ul class="team-list-socials">
 								<li class="socials-item">
-									<a class="socials-item-link" href="#">Instagram</a>
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-instagram-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Twitter</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-twitter-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Facebook</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-Facebook-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Linkedin</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-linkedin-2"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -180,16 +256,32 @@
 							<p class="team-list-text">UI Designer</p>
 							<ul class="team-list-socials">
 								<li class="socials-item">
-									<a class="socials-item-link" href="#">Instagram</a>
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-instagram-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Twitter</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-twitter-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Facebook</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-Facebook-2"></use>
+										</svg>
+									</a>
 								</li>
-								<li>
-									<a class="socials-item-link" href="#">Linkedin</a>
+								<li class="socials-item">
+									<a class="socials-item-link" href="#">
+										<svg class="icon-socials-team">
+											<use href="./images/sprite.svg#icon-linkedin-2"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -202,33 +294,45 @@
 					<h2 class="section-title clients-title">Постоянные клиенты</h2>
 					<ul class="clients-list">
 						<li class="clients-list-item">
-							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-1.svg" alt="Логотип компании" />
+							<a class="clients-list-link" href="">
+								<svg class="icon-clients" width="45" height="50">
+									<use href="./images/sprite.svg#icon-logo-1"></use>
+								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
 							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-3.svg" alt="Логотип компании" />
+								<svg class="icon-clients" width="40" height="52">
+									<use href="./images/sprite.svg#icon-logo-2"></use>
+								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
 							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-4.svg" alt="Логотип компании" />
+								<svg class="icon-clients" width="41" height="42">
+									<use href="./images/sprite.svg#icon-logo-3"></use>
+								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
 							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-5.svg" alt="Логотип компании" />
+								<svg class="icon-clients" width="80" height="42">
+									<use href="./images/sprite.svg#icon-logo-4"></use>
+								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
 							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-2.svg" alt="Логотип компании" />
+								<svg class="icon-clients" width="59" height="47">
+									<use href="./images/sprite.svg#icon-logo-5"></use>
+								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
 							<a class="clients-list-link" href="#">
-								<img class="clients-list-image" src="./images/logo-6.svg" alt="Логотип компании" />
+								<svg class="icon-clients" width="89" height="45">
+									<use href="./images/sprite.svg#icon-logo-6"></use>
+								</svg>
 							</a>
 						</li>
 					</ul>
@@ -262,16 +366,32 @@
 						<h3 class="footer-social-title">присоединяйтесь</h3>
 						<ul class="footer-list-socials">
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-instagram" href="https://www.instagram.com/"></a>
+								<a class="footer-socials-link" href="https://www.instagram.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-instagram-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-twitter" href="https://twitter.com/"></a>
+								<a class="footer-socials-link" href="https://twitter.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-twitter-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-facebook" href="https://www.facebook.com/"></a>
+								<a class="footer-socials-link" href="https://www.facebook.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-Facebook-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-linkedin" href="https://www.linkedin.com/"></a>
+								<a class="footer-socials-link" href="https://www.linkedin.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-linkedin-2"></use>
+									</svg>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -280,7 +400,7 @@
 					</div>
 				</div>
 
-				<p class="footer-copyright-text">2020 | Developed by GoIT Students</p>
+				<!-- <p class="footer-copyright-text">2020 | Developed by GoIT Students</p> -->
 			</div>
 		</footer>
 	</body>
