--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,18 @@
 
 					<ul class="header-contact">
 						<li class="header-contact-address">
-							<a class="contact-address icon-envelop" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<svg class="icon-address-header">
+								<use href="./images/sprite.svg#icon-envelope"></use>
+							</svg>
+							<a class="contact-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
 						</li>
 						<li class="header-contact-address">
-							<a class="contact-address icon-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+							<a class="contact-address" href="tel:+380961111111">
+								<svg class="icon-address-header">
+									<use href="./images/sprite.svg#icon-phone"></use>
+								</svg>
+								+38 096 111 11 11
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -227,16 +235,32 @@
 						<h3 class="footer-social-title">присоединяйтесь</h3>
 						<ul class="footer-list-socials">
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-instagram" href="https://www.instagram.com/"></a>
+								<a class="footer-socials-link" href="https://www.instagram.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-instagram-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-twitter" href="https://twitter.com/"></a>
+								<a class="footer-socials-link" href="https://twitter.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-twitter-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-facebook" href="https://www.facebook.com/"></a>
+								<a class="footer-socials-link" href="https://www.facebook.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-Facebook-2"></use>
+									</svg>
+								</a>
 							</li>
 							<li class="footer-socials-item">
-								<a class="footer-socials-link footer-icon-linkedin" href="https://www.linkedin.com/"></a>
+								<a class="footer-socials-link" href="https://www.linkedin.com/">
+									<svg class="icon-footer">
+										<use href="./images/sprite.svg#icon-linkedin-2"></use>
+									</svg>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -245,7 +269,7 @@
 					</div>
 				</div>
 
-				<p class="footer-copyright-text">2020 | Developed by GoIT Students</p>
+				<!-- <p class="footer-copyright-text">2020 | Developed by GoIT Students</p> -->
 			</div>
 		</footer>
 	</body>
