--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
 					<ul class="header-contact">
 						<li class="header-contact-address">
-							<svg class="icon-address-header">
-								<use href="./images/sprite.svg#icon-envelope"></use>
-							</svg>
-							<a class="contact-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<a class="contact-address" href="mailto:info@devstudio.com">
+								<svg class="icon-address-header">
+									<use href="./images/sprite.svg#icon-envelope"></use>
+								</svg>
+								info@devstudio.com
+							</a>
 						</li>
 						<li class="header-contact-address">
 							<a class="contact-address" href="tel:+380961111111">
