--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					<h2 class="section-title team-title">Наша команда</h2>
 					<ul class="team-list">
 						<li class="team-list-item">
-							<img class="team-list-image" src="./images/Николай Кучеренко.jpg" alt="John Smith" />
+							<img class="team-list-image" src="./images/Nikolay_Kucherenko.jpg" alt="Nikolay Kucherenko" />
 							<h3 class="team-list-title">Николай Кучеренко</h3>
 							<p class="team-list-text">Product Designer</p>
 							<ul class="team-list-socials">
@@ -183,7 +183,7 @@
 							</ul>
 						</li>
 						<li class="team-list-item">
-							<img class="team-list-image" src="./images/Ольга Иванова.jpg" alt="Marta Stewart" />
+							<img class="team-list-image" src="./images/Olga_Ivanova.jpg" alt="Olga Ivanova" />
 							<h3 class="team-list-title">Ольга Иванова</h3>
 							<p class="team-list-text">Frontend Developer</p>
 							<ul class="team-list-socials">
@@ -218,7 +218,7 @@
 							</ul>
 						</li>
 						<li class="team-list-item">
-							<img class="team-list-image" src="./images/Андрей Шевченко.jpg" alt="Robert Jakis" />
+							<img class="team-list-image" src="./images/Andrey_Shevchenko.jpg" alt="Andrey Shevchenko" />
 							<h3 class="team-list-title">Андрей Шевченко</h3>
 							<p class="team-list-text">Marketing</p>
 							<ul class="team-list-socials">
@@ -253,7 +253,7 @@
 							</ul>
 						</li>
 						<li class="team-list-item">
-							<img class="team-list-image" src="./images/Иван Николаев.jpg" alt="Martin Doe" />
+							<img class="team-list-image" src="./images/Ivan_Nikolaev.jpg" alt="Ivan Nikolaev" />
 							<h3 class="team-list-title">Иван Николаев</h3>
 							<p class="team-list-text">UI Designer</p>
 							<ul class="team-list-socials">
