--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
 
 					<ul class="portfolio-list">
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-1.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -103,7 +103,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-2.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -116,7 +116,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-3.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -129,7 +129,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-4.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -142,7 +142,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-5.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -155,7 +155,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-6.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -168,7 +168,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-7.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -181,7 +181,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-8.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -194,7 +194,7 @@
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<div>
+							<div class="portfolio-inner">
 								<img class="portfolio-list-image" src="./images/img-project-9.jpg" alt="" />
 								<p class="portfolio-list-content">
 									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
